Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1524

Flushing large compressed values can cause a crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • 1.2.0
    • cfile
    • None

    Description

      It's possible right now to insert values that cannot be flushed. If a column is configured to be compressed, the block compressor will limit blocks to 16MB so if a large value isn't compressible, it won't be flushable. It will show up like this in the log:

      Invalid argument: Flush to disk failed: estimated max size 29545252 is greater than the expected 16777216
      

      Once this happens it's impossible to bring the server back since it will bootstrap the tablet, try flushing again, and crash.

      Attachments

        Issue Links

          Activity

            People

              Unassigned Unassigned
              jdcryans Jean-Daniel Cryans
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: