src/kudu/cfile/block_compression.h
@@ -34,7 +34,7 @@ namespace cfile {
 class CompressedBlockBuilder {
  public:
   // 'codec' is expected to remain alive for the lifetime of this object.
-  CompressedBlockBuilder(const CompressionCodec* codec, size_t size_limit);
+  explicit CompressedBlockBuilder(const CompressionCodec* codec);
 
   // Sets "*result" to the compressed version of the "data".
   // The data inside the result is owned by the CompressedBlockBuilder class
@@ -51,13 +51,12 @@ class CompressedBlockBuilder {
   DISALLOW_COPY_AND_ASSIGN(CompressedBlockBuilder);
   const CompressionCodec* codec_;
   faststring buffer_;
-  size_t compressed_size_limit_;
 };
 
 class CompressedBlockDecoder {
  public:
   // 'codec' is expected to remain alive for the lifetime of this object.
-  CompressedBlockDecoder(const CompressionCodec* codec, size_t size_limit);
+  explicit CompressedBlockDecoder(const CompressionCodec* codec);
 
   // Sets "*result" to the uncompressed version of the "data".
   // It is the caller's responsibility to free the result data.
@@ -85,7 +84,6 @@ class CompressedBlockDecoder {
  private:
   DISALLOW_COPY_AND_ASSIGN(CompressedBlockDecoder);
   const CompressionCodec* codec_;
-  size_t uncompressed_size_limit_;
 };
 
 } // namespace cfile
